objects/LogEvent__e.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessType__c</fullName>
        <label>ProcessType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>LogEvent</label>
    <pluralLabel>LogEvents</pluralLabel>
</CustomObject>